0030081: Visualization - selection does not work when two clipping planes cut object from opposite sides

Fixed combining independent clipping planes into single range within SelectMgr_RectangularFrustum::computeClippingRange().